--- a/Web.config
+++ b/Web.config
@@ -4,7 +4,13 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <system.web>
+	<connectionStrings>
+  <add name="con" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Dell\source\repos\ILD\App_Data\App_Data\Database1.mdf;Integrated Security=True" />
+  <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\App_Data\Database1.mdf;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
+	
+	<system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
