--- a/Web.config
+++ b/Web.config
@@ -4,11 +4,6 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<connectionStrings>
-  <add name="con" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Dell\source\repos\ILD\App_Data\App_Data\Database1.mdf;Integrated Security=True" />
-  <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\App_Data\Database1.mdf;Integrated Security=True"
-   providerName="System.Data.SqlClient" />
- </connectionStrings>
 	
 	<system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -20,7 +15,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-        <connectionStrings>
-		<add name ="con" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\fat_b\source\repos\ILD\App_Data\Database1.mdf;Integrated Security=True"></add>
-	  </connectionStrings>
+	<connectionStrings>
+		<add name ="con" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Dell\source\repos\ILD\App_Data\Database1.mdf;Integrated Security=True"></add>
+	</connectionStrings>
 </configuration>
