--- a/Web.config
+++ b/Web.config
@@ -16,6 +16,6 @@
     </compilers>
   </system.codedom>
 	<connectionStrings>
-		<add name ="con" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Dell\source\repos\ILD\App_Data\Database1.mdf;Integrated Security=True"></add>
+		<add name ="con" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Dell\source\repos\ILD\App_Data\Database1.mdf;Integrated Security=True " providerName="System.Data.SqlClient"></add>
 	</connectionStrings>
 </configuration>
